--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components{
+    .card{
+        @apply flex flex-row px-3 py-5 z-10 fixed left-[50%] bottom-8 transform translate-x-[-50%] gap-3 bg-black bg-opacity-40 rounded
+    }
+
+    .icon{
+        @apply bg-transparent rounded-3xl px-2 hover:bg-black hover:bg-opacity-60
+    }
+
+    .gridcard{
+        @apply border-solid py-7 px-4 mx-2 my-2 text-center border-transparent border-2 bg-blue-900 rounded-md flex flex-col items-center justify-center hover:bg-transparent hover:border-blue-900 hover:border-4
+    }
+
+    .track{
+
+        @apply bg-blue-900 border-solid border-transparent rounded-2xl py-8 px-10 mx-8 hover:bg-transparent hover:border-blue-900 hover:border-2 transition-all ease-out duration-300
+    }
+
+    .head{
+        @apply bg-blue-950 p-8 border rounded-bl-3xl rounded-br-3xl shadow-md shadow-gray-600
+    }
+
+    .card2{
+    @apply bg-blue-900 rounded-bl-3xl rounded-br-3xl border border-solid object-fill transition-all ease-in duration-300 hover:bg-transparent hover:cursor-default hover:border-blue-300;
+    }
+    
+    .portfolio_project{
+        @apply p-5 border-solid border-transparent rounded-3xl bg-blue-950 transition-all ease-in duration-300 hover:border-blue-950 hover:border hover:bg-transparent
+    }
+    .testimonial_image{
+        @apply rounded-full w-20 h-20 overflow-hidden border-4 border-solid border-blue-700 object-cover
+    }
+    .contact{
+        @apply bg-blue-900 p-5 border rounded-2xl text-center border-solid border-transparent transition-all ease-out duration-300 gap-7 my-4 px-2 hover:bg-transparent hover:border-blue-300
+    }
+    .lis{
+        @apply my-2 py-3 px-5 w-[100%] rounded-2xl border-2 border-solid bg-transparent border-blue-900 resize-none text-white
+    }
 }
